<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/dailyMenuFragment">

    <fragment
        android:id="@+id/dailyMenuFragment"
        android:name="com.cocido.morfipolo.ui.menu.daily.DailyMenuFragment"
        android:label="@string/menu_daily"
        tools:layout="@layout/fragment_daily_menu">
        <argument
            android:name="menuDate"
            app:argType="string"
            android:defaultValue=""
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/weeklyMenuFragment"
        android:name="com.cocido.morfipolo.ui.menu.weekly.WeeklyMenuFragment"
        android:label="@string/menu_weekly"
        tools:layout="@layout/fragment_weekly_menu">
        <action
            android:id="@+id/action_weeklyMenuFragment_to_dailyMenuFragment"
            app:destination="@id/dailyMenuFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.cocido.morfipolo.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_notificationSettingsFragment"
            app:destination="@id/notificationSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationSettingsFragment"
        android:name="com.cocido.morfipolo.ui.notifications.NotificationSettingsFragment"
        android:label="@string/notification_settings"
        tools:layout="@layout/fragment_notification_settings" />

</navigation>






